# Twitter-clone

./: docker-compose.yml  readme.md
backend/: .env.dev  db.sqlite3  pyproject.toml  pytest.ini
backend/follows/migrations/: 0001_initial.py  0002_initial.py
backend/follows/models/: follows_models.py
backend/follows/viewsets/: follows_viewset.py
backend/notifications/migrations/: 0001_initial.py
backend/notifications/models/: notification_models.py
backend/notifications/serializers/: __init__.py  notifications_serializers.py
backend/notifications/viewsets/: notifications_viewset.py
backend/tweets/migrations/: 0001_initial.py
backend/tweets/models/: tweet_model.py
backend/tweets/serializers/: __init__.py  tweets_serializers.py
backend/tweets/viewsets/: tweets_viewset.py
backend/twitter_clone/: settings.py  urls.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: user_models.py
backend/users/serializers/: user_serializer.py
backend/users/tests/: user_test.py
backend/users/viewsets/: user_viewset.py
front-end/src/: index.css
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/twitter_clone/src/api/: base_api.js
frontend/twitter_clone/src/components/Home/: index.jsx
