[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Richard <richardfelipelives@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
